--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -4,13 +4,13 @@ scrape_configs:
  - job_name: prometheus
    static_configs:
     - targets:
-       - host.docker.internal:9090
+       - localhost:9090
  - job_name: node
    static_configs:
-    - targets: ['host.docker.internal:9100']
+    - targets: ['node-exporter:9100']
  - job_name: indexer
    static_configs:
-    - targets: [ host.docker.internal:11001, host.docker.internal:11002, host.docker.internal:11003 ]
+    - targets: [ lister:8080, consumer:8080, record-indexer:8080, pds-discovery:8080 ]
  - job_name: db
    static_configs:
-    - targets: ['host.docker.internal:9560']
+    - targets: ['query-exporter:9560']
